--- a/src/components/lesson/LessonView.module.css
+++ b/src/components/lesson/LessonView.module.css
@@ -9,7 +9,7 @@
 }
 
 .cardContainer {
-  min-height: 500px;
+  min-height: clamp(320px, 52dvh, 500px);
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -58,7 +58,7 @@
   }
 
   .cardContainer {
-    min-height: 400px;
+    min-height: clamp(280px, 44dvh, 380px);
     padding: 1rem;
   }
 
